--- a/index.html
+++ b/index.html
@@ -18,14 +18,64 @@
       </div>
       <nav class="menu">
         <ul>
-          <li class="menu-item"><a href="#!">Главная</a></li>
-          <li class="menu-item"><a href="#!">Автомобили</a></li>
-          <li class="menu-item"><a href="#!">Бронирование авто</a></li>
+          <li class="menu-item">
+            <a href="#!">Главная</a>
+          </li>
+          <li class="menu-item">
+            <a href="#!">Автомобили</a>
+          </li>
+          <li class="menu-item">
+            <a href="#!">Бронирование авто</a>
+          </li>
         </ul>
       </nav>
     </div>
   </header>
-
+  <section class="main">
+    <div class="container">
+      <div class="main-info">
+        <h1 class="main-title">Аренда премиальных автомобилей</h1>
+        <div class="main-text">В нашем клубе имеется солидная коллекция спортивных автомобилей — от достаточно распространенных серийных машин до настоящего гоночного эксклюзива. Воспользуйтесь уникальной возможностью побывать за рулем настоящей легенды и узнать, на что она способна за пределами гоночной трассы!</div>
+        <div class="main-actions">
+          <button class="button">Посмотреть автомобили</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="car">
+    <div class="container">
+      <h2 class="subtitle">Наш автопарк</h2>
+      <div class="card-items">
+        <div class="card-item">
+          <img src="./img/6.png" alt="">
+          <h3>Аренда Chevrolet Camaro</h3>
+          <div class="features">
+            <div class="feature">
+              <img src="./img/icons/gear.svg" alt="gear" class="feature-icon">
+              <div class="feature-info">
+                <div class="feature-text"><strong>Двигатель</strong><br/>2.0 л.с.</div>
+              </div>
+            </div>
+            <div class="feature">
+              <img src="./img/icons/engine.svg" alt="engine" class="feature-icon">
+              <div class="feature-info">
+                <div class="feature-text"><strong>Кол-во мест</strong><br/>4</div>
+              </div>
+            </div>
+            <div class="feature">
+              <img src="./img/icons/sites.svg" alt="sites" class="feature-icon">
+              <div class="feature-info">
+                <div class="feature-text"><strong>Привод</strong><br/>полный</div>
+              </div>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
