--- a/index.html
+++ b/index.html
@@ -47,26 +47,137 @@
       <h2 class="subtitle">Наш автопарк</h2>
       <div class="card-items">
         <div class="card-item">
-          <img src="./img/6.png" alt="">
-          <h3>Аренда Chevrolet Camaro</h3>
-          <div class="features">
-            <div class="feature">
-              <img src="./img/icons/gear.svg" alt="gear" class="feature-icon">
-              <div class="feature-info">
-                <div class="feature-text"><strong>Двигатель</strong><br/>2.0 л.с.</div>
-              </div>
+          <div class="car-item-image">
+            <img src="./img/1.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Lamborghini Huracan Spyder</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/gear.svg" alt="gear">
+              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
             </div>
-            <div class="feature">
-              <img src="./img/icons/engine.svg" alt="engine" class="feature-icon">
-              <div class="feature-info">
-                <div class="feature-text"><strong>Кол-во мест</strong><br/>4</div>
-              </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>5.2 л.с.</div>
             </div>
-            <div class="feature">
-              <img src="./img/icons/sites.svg" alt="sites" class="feature-icon">
-              <div class="feature-info">
-                <div class="feature-text"><strong>Привод</strong><br/>полный</div>
-              </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/sites.svg" alt="sites">
+              <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/2.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Chevrolet Corvette</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/gear.svg" alt="gear">
+              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>6.2 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/sites.svg" alt="sites">
+              <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/3.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Ferrari California</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/gear.svg" alt="gear">
+              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>3.9 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/sites.svg" alt="sites">
+              <div class="car-item-text"><strong>Кол-во мест</strong><br/>4</div>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/4.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Lamborghini Urus</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/gear.svg" alt="gear">
+              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>4.0 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/sites.svg" alt="sites">
+              <div class="car-item-text"><strong>Кол-во мест</strong><br/>5</div>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/5.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Audi R8o</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/gear.svg" alt="gear">
+              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>5.2 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/sites.svg" alt="sites">
+              <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/6.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Аренда Chevrolet Camaro</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/gear.svg" alt="gear">
+              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>2.0 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/sites.svg" alt="sites">
+              <div class="car-item-text"><strong>Кол-во мест</strong><br/>4</div>
             </div>
           </div>
           <div class="actions">
@@ -76,6 +187,15 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="logo">
+        <img src="./img/logo.png" alt="logo">
+      </div>
+      <div class="copyright">Все права защищены</div>
+    </div>
+  </footer>
 </body>
 
 </html>
