--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <nav class="menu">
         <ul>
           <li class="menu-item">
-            <a href="#!">Главная</a>
+            <a href="#">Главная</a>
           </li>
           <li class="menu-item">
-            <a href="#!">Автомобили</a>
+            <a href="#car">Автомобили</a>
           </li>
           <li class="menu-item">
-            <a href="#!">Бронирование авто</a>
+            <a href="#price">Бронирование авто</a>
           </li>
         </ul>
       </nav>
@@ -42,7 +42,7 @@
       </div>
     </div>
   </section>
-  <section class="car">
+  <section class="car" id="car">
     <div class="container">
       <h2 class="subtitle">Наш автопарк</h2>
       <div class="card-items">
@@ -65,7 +65,7 @@
               <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
             </div>
           </div>
-          <div class="actions">
+          <div class="car-item-actions">
             <button class="button">ЗАбронировать</button>
           </div>
         </div>
@@ -88,7 +88,7 @@
               <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
             </div>
           </div>
-          <div class="actions">
+          <div class="car-item-actions">
             <button class="button">ЗАбронировать</button>
           </div>
         </div>
@@ -111,7 +111,7 @@
               <div class="car-item-text"><strong>Кол-во мест</strong><br/>4</div>
             </div>
           </div>
-          <div class="actions">
+          <div class="car-item-actions">
             <button class="button">ЗАбронировать</button>
           </div>
         </div>
@@ -134,7 +134,7 @@
               <div class="car-item-text"><strong>Кол-во мест</strong><br/>5</div>
             </div>
           </div>
-          <div class="actions">
+          <div class="car-item-actions">
             <button class="button">ЗАбронировать</button>
           </div>
         </div>
@@ -157,7 +157,7 @@
               <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
             </div>
           </div>
-          <div class="actions">
+          <div class="car-item-actions">
             <button class="button">ЗАбронировать</button>
           </div>
         </div>
@@ -180,14 +180,26 @@
               <div class="car-item-text"><strong>Кол-во мест</strong><br/>4</div>
             </div>
           </div>
-          <div class="actions">
+          <div class="car-item-actions">
             <button class="button">ЗАбронировать</button>
           </div>
         </div>
       </div>
     </div>
   </section>
-
+  <section class="price" id="price">
+    <div class="container">
+      <h2 class="subtitle">Узнать цену и забронировать</h2>
+      <div class="price-text">Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования</div>
+      <form action="#!" class="price-form">
+        <input type="text" class="price-input" placeholder="Ваше имя">
+        <input type="text" class="price-input" placeholder="Ваш телефон">
+        <input type="text" class="price-input" placeholder="Автомобиль, который вас интересует">
+        <button class="button" type="submit">Узнать цену</button>
+      </form>
+      <img class="price-image" src="./img/rolls.png" alt="rolls">
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <div class="logo">
