--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
           <h3 class="car-item-title">Lamborghini Huracan Spyder</h3>
           <div class="car-item-info">
             <div class="car-item-feature">
-              <img src="./img/icons/gear.svg" alt="gear">
-              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
             </div>
             <div class="car-item-feature">
               <img src="./img/icons/engine.svg" alt="engine">
               <div class="car-item-text"><strong>Двигатель</strong><br/>5.2 л.с.</div>
             </div>
             <div class="car-item-feature">
-              <img src="./img/icons/sites.svg" alt="sites">
-              <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2019</div>
             </div>
           </div>
           <div class="car-item-actions">
@@ -76,16 +76,16 @@
           <h3 class="car-item-title">Chevrolet Corvette</h3>
           <div class="car-item-info">
             <div class="car-item-feature">
-              <img src="./img/icons/gear.svg" alt="gear">
-              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
             </div>
             <div class="car-item-feature">
               <img src="./img/icons/engine.svg" alt="engine">
               <div class="car-item-text"><strong>Двигатель</strong><br/>6.2 л.с.</div>
             </div>
             <div class="car-item-feature">
-              <img src="./img/icons/sites.svg" alt="sites">
-              <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2017</div>
             </div>
           </div>
           <div class="car-item-actions">
@@ -99,16 +99,16 @@
           <h3 class="car-item-title">Ferrari California</h3>
           <div class="car-item-info">
             <div class="car-item-feature">
-              <img src="./img/icons/gear.svg" alt="gear">
-              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
             </div>
             <div class="car-item-feature">
               <img src="./img/icons/engine.svg" alt="engine">
               <div class="car-item-text"><strong>Двигатель</strong><br/>3.9 л.с.</div>
             </div>
             <div class="car-item-feature">
-              <img src="./img/icons/sites.svg" alt="sites">
-              <div class="car-item-text"><strong>Кол-во мест</strong><br/>4</div>
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2010</div>
             </div>
           </div>
           <div class="car-item-actions">
@@ -122,16 +122,16 @@
           <h3 class="car-item-title">Lamborghini Urus</h3>
           <div class="car-item-info">
             <div class="car-item-feature">
-              <img src="./img/icons/gear.svg" alt="gear">
-              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
             </div>
             <div class="car-item-feature">
               <img src="./img/icons/engine.svg" alt="engine">
               <div class="car-item-text"><strong>Двигатель</strong><br/>4.0 л.с.</div>
             </div>
             <div class="car-item-feature">
-              <img src="./img/icons/sites.svg" alt="sites">
-              <div class="car-item-text"><strong>Кол-во мест</strong><br/>5</div>
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2019</div>
             </div>
           </div>
           <div class="car-item-actions">
@@ -145,16 +145,16 @@
           <h3 class="car-item-title">Audi R8o</h3>
           <div class="car-item-info">
             <div class="car-item-feature">
-              <img src="./img/icons/gear.svg" alt="gear">
-              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
             </div>
             <div class="car-item-feature">
               <img src="./img/icons/engine.svg" alt="engine">
               <div class="car-item-text"><strong>Двигатель</strong><br/>5.2 л.с.</div>
             </div>
             <div class="car-item-feature">
-              <img src="./img/icons/sites.svg" alt="sites">
-              <div class="car-item-text"><strong>Кол-во мест</strong><br/>2</div>
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2018</div>
             </div>
           </div>
           <div class="car-item-actions">
@@ -168,16 +168,85 @@
           <h3 class="car-item-title">Аренда Chevrolet Camaro</h3>
           <div class="car-item-info">
             <div class="car-item-feature">
-              <img src="./img/icons/gear.svg" alt="gear">
-              <div class="car-item-text"><strong>Привод</strong><br/>полный</div>
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
             </div>
             <div class="car-item-feature">
               <img src="./img/icons/engine.svg" alt="engine">
               <div class="car-item-text"><strong>Двигатель</strong><br/>2.0 л.с.</div>
             </div>
             <div class="car-item-feature">
-              <img src="./img/icons/sites.svg" alt="sites">
-              <div class="car-item-text"><strong>Кол-во мест</strong><br/>4</div>
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2019</div>
+            </div>
+          </div>
+          <div class="car-item-actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/7.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Maserati Quattroporte</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>4.0 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2018</div>
+            </div>
+          </div>
+          <div class="car-item-actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/8.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Dodge Challenger</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>6.4 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2019</div>
+            </div>
+          </div>
+          <div class="car-item-actions">
+            <button class="button">ЗАбронировать</button>
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="car-item-image">
+            <img src="./img/9.png" alt="car">
+          </div>
+          <h3 class="car-item-title">Nissan GT-R</h3>
+          <div class="car-item-info">
+            <div class="car-item-feature">
+              <img src="./img/icons/transmission.png" alt="transmission">
+              <div class="car-item-text"><strong>Коробка</strong><br/>автомат</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/engine.svg" alt="engine">
+              <div class="car-item-text"><strong>Двигатель</strong><br/>3.8 л.с.</div>
+            </div>
+            <div class="car-item-feature">
+              <img src="./img/icons/year.png" alt="year">
+              <div class="car-item-text"><strong>Год выпуска</strong><br/>2019</div>
             </div>
           </div>
           <div class="car-item-actions">
